--- a/blog-post-3.html
+++ b/blog-post-3.html
@@ -220,6 +220,7 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
+                    <li><a href="training.html#our-team">Perfect duo</a></li>
                 </ul>
             </div>
             <div class="footer-locations">
@@ -249,9 +250,9 @@
     </footer>
 
     <!-- Floating Phone Button -->
-    <a href="#" class="float-phone-btn" aria-label="Call Now" id="floatPhoneBtn">
+    <a href="#" class="float-phone-btn" aria-label="Call Us Now! We are trainers" id="floatPhoneBtn">
         <i class="fas fa-phone-alt"></i>
-        <span class="btn-text">Call Us Now!</span>
+        <span class="btn-text">Call Us Now!<br>We are trainers</span>
     </a>
 
     <!-- Phone Modal -->
