--- a/elite-1.html
+++ b/elite-1.html
@@ -113,22 +113,49 @@
 
     <!-- Elite Content -->
     <section class="section-padding bg-light">
-        <div class="container" style="max-width: 900px; background: white; padding: 50px; border-radius: 12px; box-shadow: var(--shadow);">
+        <div class="container"
+            style="max-width: 900px; background: white; padding: 50px; border-radius: 12px; box-shadow: var(--shadow);">
             <div class="text-center mb-4">
-                <h2 style="color: var(--dark-red); font-size: 2.5rem; margin-bottom: 10px;">$30,000</h2>
+
                 <p>A premier package designed to build the foundation of communication and protection.</p>
             </div>
             <h3 style="margin-bottom: 20px;">Program Includes:</h3>
             <ul class="check-list" style="font-size: 1.1rem; display: flex; flex-direction: column;">
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Flawless On- & Off-Leash Mastery:</strong> Perfect obedience and complete control, no matter the situation.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Seamless Environmental Adaptation:</strong> Engineered to remain completely cool, calm, and collected across any environment—from private estates and bustling urban centers to first-class travel.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Core Confidence Conditioning:</strong> Unshakeable self-assurance programmed to handle the unpredictability of the real world.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Advanced Tactical Protection:</strong> Precision defense commands including send-to-intercept, instant verbal recall, tactical call-off, and forward down.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>3-Day VIP Handler Integration (24 Hours):</strong> An immersive, hands-on handover experience designed to perfectly sync you with your new K9 partner.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>1-Year Elite Support:</strong> Quarterly 2-day intensive refresher sessions to keep your dog's skills razor-sharp.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Flawless On- & Off-Leash Mastery:</strong> Perfect obedience and complete control, no
+                        matter the situation.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Seamless Environmental Adaptation:</strong> Engineered to remain completely cool, calm,
+                        and collected across any environment—from private estates and bustling urban centers to
+                        first-class travel.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Core Confidence Conditioning:</strong> Unshakeable self-assurance programmed to handle
+                        the unpredictability of the real world.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Advanced Tactical Protection:</strong> Precision defense commands including
+                        send-to-intercept, instant verbal recall, tactical call-off, and forward down.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>3-Day VIP Handler Integration (24 Hours):</strong> An immersive, hands-on handover
+                        experience designed to perfectly sync you with your new K9 partner.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>1-Year Elite Support:</strong> Quarterly 2-day intensive refresher sessions to keep
+                        your dog's skills razor-sharp.</div>
+                </li>
             </ul>
             <div class="text-center" style="margin-top: 50px;">
-                <a href="consultation.html" class="btn-primary" style="font-size: 1.2rem; padding: 15px 40px; border-radius: 50px;">Request Information</a>
+                <a href="consultation.html" class="btn-primary"
+                    style="font-size: 1.2rem; padding: 15px 40px; border-radius: 50px;">Request Information</a>
             </div>
         </div>
     </section>
@@ -174,6 +201,7 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
+                    <li><a href="training.html#our-team">Perfect duo</a></li>
                 </ul>
             </div>
 
@@ -207,9 +235,9 @@
     </footer>
 
     <!-- Floating Phone Button -->
-    <a href="#" class="float-phone-btn" aria-label="Call Now" id="floatPhoneBtn">
+    <a href="#" class="float-phone-btn" aria-label="Call Us Now! We are trainers" id="floatPhoneBtn">
         <i class="fas fa-phone-alt"></i>
-        <span class="btn-text">Call Us Now!</span>
+        <span class="btn-text">Call Us Now!<br>We are trainers</span>
     </a>
     <!-- Phone Modal -->
     <div id="phoneModal" class="modal-phone">
