--- a/elite-3.html
+++ b/elite-3.html
@@ -113,24 +113,61 @@
 
     <!-- Elite Content -->
     <section class="section-padding bg-light">
-        <div class="container" style="max-width: 900px; background: white; padding: 50px; border-radius: 12px; box-shadow: var(--shadow);">
+        <div class="container"
+            style="max-width: 900px; background: white; padding: 50px; border-radius: 12px; box-shadow: var(--shadow);">
             <div class="text-center mb-4">
-                <h2 style="color: var(--dark-red); font-size: 2.5rem; margin-bottom: 10px;">$75,000</h2>
+
                 <p>A premier package designed to build the foundation of communication and protection.</p>
             </div>
             <h3 style="margin-bottom: 20px;">Program Includes:</h3>
             <ul class="check-list" style="font-size: 1.1rem; display: flex; flex-direction: column;">
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Flawless On- & Off-Leash Mastery:</strong> Perfect obedience and complete control, no matter the situation.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Seamless Environmental Adaptation:</strong> Engineered to remain completely cool, calm, and collected across any environment—from private estates and bustling urban centers to first-class travel.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Core Confidence Conditioning:</strong> Unshakeable self-assurance programmed to handle the unpredictability of the real world.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Advanced Tactical Protection:</strong> Precision defense commands including send-to-intercept, instant verbal recall, tactical call-off, and forward down.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Commanded Area Denial:</strong> Strategic on-cue "guard and bark" activation to secure your perimeter instantly.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Extreme Threat Conditioning:</strong> Hardened response protocols for ultra-high-risk scenarios, including anti-carjacking, anti-kidnapping, and ambush defense.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Autonomous Threat Assessment:</strong> Elite-level instinct cultivation allowing your Guardian to independently read, evaluate, and neutralize threats with surgical precision—often responding before a command is even given.</div></li>
-                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i> <div><strong>Strategic Deterrence & De-escalation:</strong> Psychological dominance and a commanding presence designed to stop threats in their tracks through calculated posturing, avoiding physical contact whenever possible.</div></li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Flawless On- & Off-Leash Mastery:</strong> Perfect obedience and complete control, no
+                        matter the situation.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Seamless Environmental Adaptation:</strong> Engineered to remain completely cool, calm,
+                        and collected across any environment—from private estates and bustling urban centers to
+                        first-class travel.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Core Confidence Conditioning:</strong> Unshakeable self-assurance programmed to handle
+                        the unpredictability of the real world.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Advanced Tactical Protection:</strong> Precision defense commands including
+                        send-to-intercept, instant verbal recall, tactical call-off, and forward down.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Commanded Area Denial:</strong> Strategic on-cue "guard and bark" activation to secure
+                        your perimeter instantly.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Extreme Threat Conditioning:</strong> Hardened response protocols for ultra-high-risk
+                        scenarios, including anti-carjacking, anti-kidnapping, and ambush defense.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Autonomous Threat Assessment:</strong> Elite-level instinct cultivation allowing your
+                        Guardian to independently read, evaluate, and neutralize threats with surgical precision—often
+                        responding before a command is even given.</div>
+                </li>
+                <li style="display: flex; align-items: flex-start; gap: 15px; margin-bottom: 20px;"><i
+                        class="fas fa-check" style="margin-top: 5px; color: var(--primary-orange);"></i>
+                    <div><strong>Strategic Deterrence & De-escalation:</strong> Psychological dominance and a commanding
+                        presence designed to stop threats in their tracks through calculated posturing, avoiding
+                        physical contact whenever possible.</div>
+                </li>
             </ul>
             <div class="text-center" style="margin-top: 50px;">
-                <a href="consultation.html" class="btn-primary" style="font-size: 1.2rem; padding: 15px 40px; border-radius: 50px;">Request Information</a>
+                <a href="consultation.html" class="btn-primary"
+                    style="font-size: 1.2rem; padding: 15px 40px; border-radius: 50px;">Request Information</a>
             </div>
         </div>
     </section>
@@ -176,6 +213,7 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
+                    <li><a href="training.html#our-team">Perfect duo</a></li>
                 </ul>
             </div>
 
@@ -209,9 +247,9 @@
     </footer>
 
     <!-- Floating Phone Button -->
-    <a href="#" class="float-phone-btn" aria-label="Call Now" id="floatPhoneBtn">
+    <a href="#" class="float-phone-btn" aria-label="Call Us Now! We are trainers" id="floatPhoneBtn">
         <i class="fas fa-phone-alt"></i>
-        <span class="btn-text">Call Us Now!</span>
+        <span class="btn-text">Call Us Now!<br>We are trainers</span>
     </a>
     <!-- Phone Modal -->
     <div id="phoneModal" class="modal-phone">
