--- a/training.html
+++ b/training.html
@@ -196,7 +196,7 @@
                     <h3>Behavioral Modification</h3>
                     <p>We work with your dog to correct any behavioral issues, ranging from territoriality, fear,
                         barking, lunging at cars, jumping, plus much more!</p>
-                    <a href="services.html#behavior-booking" class="btn-learn-more">Learn more</a>
+                    <a href="services.html#behavior-booking" class="btn-learn-more">Get the details</a>
                 </div>
                 <!-- Card 2 -->
                 <div class="package-card reveal reveal-fade-up" style="transition-delay: 0.1s;">
@@ -206,7 +206,7 @@
                     <h3>Obedience</h3>
                     <p>To earn a Elite 0, your dog will learn a specific set of obedience commands and do them in
                         routine, on-leash, and with precision.</p>
-                    <a href="services.html#obedience-booking" class="btn-learn-more">Learn more</a>
+                    <a href="services.html#obedience-booking" class="btn-learn-more">Check it out</a>
                 </div>
                 <!-- Card 3 -->
                 <div class="package-card reveal reveal-fade-up" style="transition-delay: 0.2s;">
@@ -349,6 +349,7 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
+                    <li><a href="training.html#our-team">Perfect duo</a></li>
                 </ul>
             </div>
 
@@ -382,9 +383,9 @@
     </footer>
 
     <!-- Floating Phone Button -->
-    <a href="#" class="float-phone-btn" aria-label="Call Now" id="floatPhoneBtn">
+    <a href="#" class="float-phone-btn" aria-label="Call Us Now! We are trainers" id="floatPhoneBtn">
         <i class="fas fa-phone-alt"></i>
-        <span class="btn-text">Call Us Now!</span>
+        <span class="btn-text">Call Us Now!<br>We are trainers</span>
     </a>
     <!-- Phone Modal -->
     <div id="phoneModal" class="modal-phone">
