--- a/training.html
+++ b/training.html
@@ -106,7 +106,7 @@
     <!-- Header -->
     <header class="page-header">
         <div class="container text-center">
-            <h1>Professional Dog Training Near Me & K9 Trainer Services</h1>
+            <h1>Professional Dog Training & K9 Trainer Services</h1>
             <p>From puppy basics to advanced protection, we are your trusted K9 solutions for confident, balanced dogs.
             </p>
         </div>
@@ -118,8 +118,7 @@
             <div class="grid-2">
                 <div class="training-content reveal reveal-slide-left">
                     <h2>Board & Train Programs for Dogs</h2>
-                    <p class="lead">Building a foundation of communication with our dog boarding and training near me
-                        programs.</p>
+                    <p class="lead">Building a foundation of communication with our dog boarding and training.</p>
                     <p>Our obedience program is designed for dogs of all ages. We focus on clear communication and
                         engagement, ensuring your dog listens to you not out of fear, but out of respect and bond.</p>
 
