--- a/available-dogs.html
+++ b/available-dogs.html
@@ -119,8 +119,9 @@
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-birthday-cake"></i> 2 Years</span>
                     </div>
-                    <p class="description">Fully trained family protection dog. Excellent with children. One of our best
-                        trained malinois dogs for sale alternatives (GSD).</p>
+                    <p class="description">Fully trained German Shepherd family protection dog with a calm, confident
+                        temperament. Exceptional with children, highly obedient, and rock-solid in real-life situations.
+                        The perfect balance of protection, loyalty, and family safety.</p>
                     <a href="dog-profile.html?id=rex" class="btn-secondary full-width btn-shine">View Profile</a>
                 </div>
             </div>
@@ -137,8 +138,8 @@
                         <span><i class="fas fa-venus-mars"></i> Female</span>
                         <span><i class="fas fa-birthday-cake"></i> 10 Weeks</span>
                     </div>
-                    <p class="description">High potential female German shepherd / Malinois mix. Perfect to start "for
-                        your K9" journey. Socialized puppy.</p>
+                    <p class="description">High potential female German shepherd / Malinois mix. Perfect to start
+                        journey. Socialized puppy.</p>
                     <a href="dog-profile.html?id=bella" class="btn-secondary full-width btn-shine">View Profile</a>
                 </div>
             </div>
@@ -155,8 +156,8 @@
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-birthday-cake"></i> 1 Year</span>
                     </div>
-                    <p class="description">Started in obedience and bite work. Top tier K9 solutions candidate.
-                        Currently under contract.</p>
+                    <p class="description">Professionally started in advanced obedience and protection training. A
+                        high-potential K9 prospect suited for top-tier working or family protection programs.</p>
                     <a href="dog-profile.html?id=max" class="btn-secondary full-width btn-shine">View Profile</a>
                 </div>
             </div>
