--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Boarding and Training Near Me | Service Dog Training Cost</title>
+    <title>Dog Boarding and Training| Service Dog Training Cost</title>
     <meta name="description"
         content="Professional dog boarding and training near me. Check out our service dog training cost, dog training cost, and board training for dogs packages.">
     <link rel="stylesheet" href="style.css">
