--- a/training.html
+++ b/training.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Training Near Me | K9 Trainer & Service Dog Training Cost</title>
+    <title>Dog Training | K9 Trainer & Service Dog Training Cost</title>
     <meta name="description"
         content="Professional dog training near me including dog boot camp, board and train dogs near me, and training for aggressive dogs. Expert K9 trainer for German Shepherds and Malinois.">
     <link rel="stylesheet" href="style.css">
@@ -128,6 +128,7 @@
                         <li><i class="fas fa-check"></i> Sit, Down, and Stay (with duration & distance)</li>
                         <li><i class="fas fa-check"></i> Reliable Recall (coming when called)</li>
                         <li><i class="fas fa-check"></i> Place command (settling in the home)</li>
+                        <li><i class="fas fa-check"></i> Yes and No commands (responding reliably)</li>
                     </ul>
 
                     <h3>Who It's For:</h3>
@@ -168,9 +169,9 @@
                     </ul>
 
                     <h3>Service Dog Training & Safety:</h3>
-                    <p>We prioritize stability. Whether it's training for aggressive dogs or confidence building for
-                        dogs, our K9 trainer ensures safety. Perfect for Alsatian training and German Shepherd training
-                        near me.</p>
+                    <p>We prioritize stability and safety in every session. From aggression management to confidence
+                        building, our expert K9 trainer ensures your dog develops into a well-balanced companion. Ideal
+                        for professional German Shepherd and Alsatian training programs.</p>
 
                     <a href="services.html#protection-booking" class="btn-secondary mt-2">Learn About Service Dog
                         Training</a>
@@ -249,7 +250,7 @@
         <div class="container">
             <div class="grid-2">
                 <div class="training-content">
-                    <h2>Puppy Training & German Shepherd Puppies</h2>
+                    <h2>Puppy Training</h2>
                     <p class="lead">Start right with our K9 solutions.</p>
                     <p>The first few months are critical. Our puppy program focuses on socialization, environmental
                         exposure, and the "learning to learn" phase.</p>
