--- a/elite-2.html
+++ b/elite-2.html
@@ -118,7 +118,7 @@
             style="max-width: 900px; background: white; padding: 50px; border-radius: 12px; box-shadow: var(--shadow);">
             <div class="text-center mb-4">
 
-                <p>A premier package designed to build the foundation of communication and protection.</p>
+                <h2>A premier package designed to build the foundation of communication and protection.</h2>
             </div>
             <h3 style="margin-bottom: 20px;">Program Includes:</h3>
             <ul class="check-list" style="font-size: 1.1rem; display: flex; flex-direction: column;">
