--- a/future-breeding.html
+++ b/future-breeding.html
@@ -193,7 +193,7 @@
                 <h3>Interested in our Breeding Services?</h3>
                 <p style="margin-bottom: 20px; color: var(--text-light);">We offer stud services and puppy reservations.
                     Contact us to discuss your goals.</p>
-                <a href="contact.html" class="btn-primary">Contact Breeding Manager</a>
+                <a href="consultation.html" class="btn-primary">Contact Breeding Manager</a>
             </div>
 
         </div>
