--- a/future-breeding.html
+++ b/future-breeding.html
@@ -175,7 +175,7 @@
                     </div>
                     <div class="breeding-info">
                         <h3>Luna</h3>
-                        <span class="breed">Belgian Malinois (KNPV Line)</span>
+                        <span class="breed">Belgian Malinois</span>
                         <p class="bio">Luna is a serious working female with deep hunt drive. She is currently an active
                             narcotics detection dog. We breed her to produce serious working prospects for law
                             enforcement and military applications.</p>
