--- a/dog-profile.html
+++ b/dog-profile.html
@@ -297,12 +297,12 @@
                 training: 'PH1 – Foundation Level',
                 description: 'Dester is a high-drive Belgian Malinois with exceptional focus, confidence, and work ethic. She demonstrates strong prey and food motivation, solid foundational obedience, and a stable, clear-headed temperament. Dester is environmentally confident, well-socialized, and highly responsive to her handler. Currently trained to PH1 (Foundation Level), she is an excellent prospect for advanced sport, personal protection, or professional K9 development. A powerful young female with elite potential, ready to move forward into PH2 training.',
                 images: [
-                    'assets/Dogs/Dester 4  PH1 Belgian Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog.jpg',
-                    'assets/Dogs/Dester 4  PH1 Belgian Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog1.jpg',
-                    'assets/Dogs/Dester 4  PH1 Belgian Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog2.jpg',
-                    'assets/Dogs/Dester 4  PH1 Belgian Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog3.jpg',
-                    'assets/Dogs/Dester 4  PH1 Belgian Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog4.jpg',
-                    'assets/Dogs/Dester 4  PH1 Belgian Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog5.jpg'
+                    'assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog.jpg',
+                    'assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog1.jpg',
+                    'assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog2.jpg',
+                    'assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog3.jpg',
+                    'assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog4.jpg',
+                    'assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog5.jpg'
                 ]
             },
             'berry': {
